@@ -26,6 +26,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #7341: Close the internal file object in the TarFile constructor in
+  case of an error.
+
 - Issue #7328: pydoc no longer corrupts sys.path when run with the '-m' switch
 
 - Issue #7318: multiprocessing now uses a timeout when it fails to establish
